@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-07-23T00:41:55Z",
+  "timestamp" : "2022-07-23T16:09:23Z",
   "count_outdated" : 1704,
   "uniques_outdated" : 109,
-  "count" : 1792,
-  "uniques" : 118,
+  "count" : 1793,
+  "uniques" : 119,
   "views" : [
     {
       "timestamp": "2022-07-11T00:00:00Z",
@@ -46,6 +46,13 @@
       "count_minmax": [ 20, 25 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ]
+    },
+    {
+      "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
     }
   ]
 }
