@@ -1,5 +1,5 @@
 {
-  "count": 88,
+  "count": 89,
   "uniques": 4,
   "views": [
     {
@@ -31,6 +31,11 @@
       "timestamp": "2022-07-22T00:00:00Z",
       "count": 25,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-07-23T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
